Prevent popovers on the right side from shifting when opening
We think this is because it's taking the (missing) scrollbar into
account during initial positioning. When it realizes it's not there,
it adjusts, causing a bit of motion.

--- a/ui/frontend/index.scss
+++ b/ui/frontend/index.scss
@@ -29,6 +29,7 @@ body {
     background-color: $background;
     padding: 0 1em;
     font-family: $primary-font;
+    overflow-y: hidden;
 }
 
 @mixin split-first-child() {
